# P11E4

./: .gitattributes  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py
datasets/brands/: data.yaml
docs/: BrandVision_Presentacion_editable_20260627_v2.20260627225055S.pptx  MAPA_URLS.md
docs/briefing/: briefing.md
notebooks/: modelo_deteccion_logos.ipynb
src/: config.py  run.py
src/database/: db.py  schema.sql
src/detection/: tracker.py  video_pipeline.py
src/reporting/: report.py
src/training/: train.py
tests/: test_db.py  test_report.py  test_tracker.py
tools/: README.md  issues_to_md.py  mapa_urls.py
